# fast_api_python

./: .coverage  README.md  pyproject.toml
fest_api_zero/: app.py  schemas.py
tests/: .coverage  conftest.py  test_app.py
