[project]
name = "fest-api-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapy (>=1.0.5,<2.0.0)",
    "fastapi (>=0.115.6,<0.116.0)"
]

[toool.ruff]
line-length =79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview= true
select = ['I','F','E','W','PL','PT']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath='.'
addopts= '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev fest_api_zero/app.py'
pre_test ='task lint'
test = 'pytest --cov fest_api_zero -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check .  --fix && ruff format .'
test_result = 'start htmlcov\index.html'